feat(ranking): auditor corrections from SDK sessions + state update
- 39 task files updated with auditor corrections from local Copilot SDK sessions
- gt_state.json updated: 39 audits done, 59 pending
- 98/98 repos codeplane-indexed